# seismic-view

./: .gitignore  CHANGELOG.md  DockerFile  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  init_prod.sh  pyproject.toml
.github/workflows/: ci.yml
postgres-data/base/1/: 1259  2619  2619_vm  2696  2840  2841
postgres-data/base/16384/: 1247  1249  1259  16385  16388  16390  16395  16398  16403  16405  2224  2579  2604  2606  2608  2610  2610_fsm  2619  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002
postgres-data/base/5/: 2619
postgres-data/global/: 1260  1262  2671  2676  pg_control
postgres-data/pg_stat/: pgstat.stat
requirements/: common.txt  dev.txt
services/auth/: .env  .env.prod  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.prod  Makefile  README.md  pyproject.toml
services/auth/db/: Dockerfile
services/auth/deploy_tools/: local.earthworm.dev.conf  nginx.conf  racm-monitor.cires-ac.net.conf
services/auth/requirements/: common.txt  dev.txt
services/auth/src/ewauth/: __init__.py  app.py  config.py  emails.txt  wsgi.py
services/auth/src/ewauth/api/: __init__.py  authentication.py  errors.py  mail.py
services/auth/src/ewauth/models/: __init__.py  email.py  email_status.py  user.py
services/auth/src/ewauth/services/: api_client.py
services/auth/src/ewauth/templates/: confirm.html  confirm.txt  reset.html  reset.txt
services/auth/src/ewauth/utils/: __init__.py  admin.py  clear_db.py  email.py  user.py  wait_for_db.py
services/auth/src/migrations/versions/: 6af57abe0d0b_email_model.py  6b4334eed8cd_user_model.py
services/auth/tests/: conftest.py
services/auth/tests/e2e/: test_auth.py
services/auth/tests/unit/: test_authentication.py  test_config.py  test_email_model.py  test_mail.py  test_user_model.py
services/client/: .dockerignore  .env.production  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.prod  Dockerfile.staging  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
services/client-old/: .env  .env.production  Dockerfile.prod  Makefile  README.md  package-lock.json  package.json  vite.config.js
services/client-old/nginx/: http.conf  https.conf  stream.conf
services/client-old/server/: Dockerfile  docker-compose.yml  requirements.txt
services/client-old/src/: App.jsx  api.js  index.css  main.jsx
services/client-old/tests/: readme.md
services/client/nginx/: ew-viewer.net.conf  http.conf  https.conf
services/client/server/: README.md  server.py
services/client/src/: App.tsx  Dockerfile  api.js
services/client/tests/: setup.js  setup.ts
services/stations/: Dockerfile.prod
services/stations/requirements/: common.txt  dev.txt
services/stations/tests/: address.py  test_receives_and_sends_messages.py  test_station_data.py  test_wave_generator.py  test_wsserver.py
src/seismicview/: __init__.py  config.py  main.py  server.py  wsserver.py
tests/: test_receives_and_sends_messages.py  test_server.py  test_station_data.py  test_wsserver.py
tests/unit/: test_import.py
(+68 files in other folders)
