# pyproject.toml

[build-system]
requires      = ["setuptools>=65.5.0", "pysocklib>=0.3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seismicview"
version = "0.1.0"
description = "Get, process and distribute pozo stations data."
readme = "README.md"
authors = [{ name = "Daniel Ibarrola", email = "daniel.ibarrola.sanchez@gmail.com" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["seismic", "stations"]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["bumpver", "pytest"]

[project.urls]
Homepage = "https://github.com/Daniel-Ibarrola/seismic-view.git"
