# pyproject.toml

[build-system]
requires      = [
    "setuptools>=65.5.0",
    "pysocklib>=0.3.2",
    "websockets>=11.0.3",
    "janus>=1.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "seismicview"
version = "0.1.0"
description = "Websocket server to send seismic station data."
readme = "README.md"
authors = [{ name = "Daniel Ibarrola", email = "daniel.ibarrola.sanchez@gmail.com" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["seismic", "stations"]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "bumpver",
    "pytest",
    "pytest-asyncio"
]

[project.urls]
Homepage = "https://github.com/Daniel-Ibarrola/seismic-view.git"


[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"src/seismicview/__init__.py" = ["{version}"]
